2002-08-26  Alan Modra  <amodra@bigpond.net.au>

	* gas/ieee-fp/x930509a.exp: Run the test but xfail.  Add c80 to xfails.

	* gas/vax/quad.exp: Use quad_elf.s for ELF targets.
	* gas/vax/quad.s: Align
	* gas/vax/quad_elf.s: New version of quad.s with %reg.

	* gas/sparc/sparc.exp (sparc_elf_setup): New.
	Use it to xfail for non-ELF targets.

	* gas/tic54x/align.s: Add comment.
	* gas/tic54x/align.d: Adjust .text size for 2002-05-23 write.c change.
	* gas/tic54x/extaddr.d: Similarly adjust disassembly tail.

2002-08-20  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* gas/mips/empic.d: Treat "addiu" and "daddiu" as equivalent when
	$0 is source.

2002-08-06  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2002-08-01  H.J. Lu <hjl@gnu.org>
	* gas/mips/elf-rel6.s: Add ".p2align 4".
	* gas/mips/elf-rel6.d: Check nop.

2002-08-01  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2002-08-01  Richard Sandiford  <rsandifo@redhat.com>
	* gas/mips/elf-rel6.[sd]: New test.
	* gas/mips/mips.exp: Run it.

2002-07-30  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2002-07-29  Chris Demetriou  <cgd@broadcom.com>
	* gas/mips/elf_ase_mips16.d: New file to test ELF MIPS16 ASE marking.
	* gas/mips/elf_ase_mips16.s: Likewise.
	* gas/mips/mips.exp: Run the new test.

2002-07-26  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/altivec.d: Invoke "as" with "-a32".

2002-07-19  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/list-pseudoints.l: Adjust for changes in gas section
	padding.
	* gas/mmix/greg7.d: Ditto.
	* gas/mmix/greg8.d: Ditto.
	* gas/mmix/fb-2.d: Ditto.
	* gas/mmix/comment-1.d: Ditto.
	* gas/mmix/byte-1.d: Ditto.

2002-07-17  H.J. Lu <hjl@gnu.org>

	* gas/ia64/dv-branch.d: Updated.
	* gas/ia64/opc-b.d: Likewise.

2002-07-08  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/intel16.s: New.
	* gas/i386/intel16.d: New.
	* gas/i386/i386.exp: Run it.

2002-07-03  Alan Modra  <amodra@bigpond.net.au>
